<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".Profile">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/profilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/profilePic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars"/>

        <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/userNameDisplay"
                android:textSize="36sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="170dp"
                app:layout_constraintStart_toStartOf="parent"
                android:fontFamily="@font/amatica_sc_bold"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

        <!--
        <FrameLayout
                android:id="@+id/profile_frame_block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triple_profil_deeper_opt">

        </FrameLayout>
        -->

        <FrameLayout
                android:id="@+id/profile_frame_block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/main_nav"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/triple_profil_deeper_opt"
                tools:layout_editor_absoluteY="162dp">

        </FrameLayout>
        <LinearLayout
                android:id="@+id/triple_profil_deeper_opt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genderTitle">

            <Button
                    android:id="@+id/favorite_nav_butt"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favorite_comps"

                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Button
                    android:id="@+id/friends_nav_butt"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friends"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Button
                    android:id="@+id/written_nav_butt"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/written_comps"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@+id/friends_nav_butt"
                    app:layout_constraintHorizontal_bias="0.406"
                    app:layout_constraintStart_toEndOf="@+id/favorite_nav_butt"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="170dp"
                app:layout_constraintTop_toBottomOf="@+id/userName"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/ageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="8dp"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/jobTitle"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/languageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="8dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ageTitle"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/genderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/languageTitle"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/userJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Beruf_Info"
                app:layout_constraintTop_toTopOf="@+id/jobTitle"
                app:layout_constraintStart_toStartOf="@+id/userLanguage"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/userAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alter_Info"
                app:layout_constraintTop_toTopOf="@+id/ageTitle"
                app:layout_constraintStart_toStartOf="@+id/userLanguage"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/userLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Sprach_Info"
                app:layout_constraintStart_toEndOf="@+id/languageTitle"
                app:layout_constraintTop_toTopOf="@+id/languageTitle"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/userGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Geschlecht_Info"
                app:layout_constraintTop_toTopOf="@+id/genderTitle"
                app:layout_constraintStart_toStartOf="@+id/userLanguage"
                android:textColor="@android:color/black"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>